# Django_Projects

./: .gitignore  README.md  pyproject.toml
API_EXAMPLE/: Pipfile  README.md
API_EXAMPLE/api_example/: settings.py  urls.py
API_EXAMPLE/languages/: views.py
CLUSTER_MANAGEMENT/: Pipfile  README.md  setup.bat  setup.bat.txt
CLUSTER_MANAGEMENT/ClusterManagement/: manage.py
CUSTOMER_MANAGER/: Pipfile
CUSTOMER_MANAGER/CustomerManager/: README.md
CustomerManager/: manage.py
CustomerManager/CustomerManager/: asgi.py  settings.py
CustomerManager/Customers/: admin.py  serializers.py  views.py
DjProject1/: manage.py
DjProject1/DjProject1/: settings.py  wsgi.py
DjProject1/app1/: views.py
DjangoTraining/: Pipfile
DjangoTraining/IPLcricket/: manage.py
FTP_to_DB_project/: Pipfile  README.md
FTP_to_DB_project/quantfarm/: manage.py
IPLcricket/IPLcricket/: settings.py  urls.py
IPLcricket/docs/: matches.csv
IPLcricket/matches/: models.py
MDN_tutorial/: README.md
Person/: manage.py
Person/Person/: asgi.py  settings.py  urls.py  wsgi.py
Person/details/: models.py  serializers.py  urls.py  views.py
PollsProject/mysite/: django_template_language(DTL).ipynb
PollsProject/mysite/polls/: models.py  (+2 more)
TODO_Application/: Pipfile  README.md
TodoProject/TodoProject/: settings.py  urls.py
TodoProject/todo/: models.py  views.py
meeting_planner/meeting_planner/: settings.py  urls.py
meeting_planner/meetings/: models.py
meeting_planner/website/: views.py
startProject/: README.md  requirements.txt
startProject/mysite/: django_ORM_queries.ipynb
(+89 files in other folders)
