[tool.poetry]
name = "django-projects"
version = "0.1.1"
description = "Django Projects for Learning"
authors = ["Udhay Prakash Pethakamsetty <uday3prakash@gmail.com>"]
license = "Apache"
readme = "README.md"
packages = [{include = "django_projects"}]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
pandas = "^2.0.3"
django = "^4.2.3"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
